- Add current highscore to clock box tooltip
- In game completed dialog:
  Add "Change Difficulty" button
  Shorten the winning string to "Puzzle Completed!" in most cases
  Bind Escape to return to the start menu
- Add Escape shortcut to popdown the number picker
- Add RTL support for earmarks
- Merge print current puzzle into print multiple dialog
- In print multiple dialog:
  Mirror print button with start game button
  Add an ellipsis to Print
  Use only the latest played difficulty to preselect choices
  Don't allow non numeric characters in the spin row
  Fix capitalization
- Fix timer color when changing difficulty
- Fix cells being in the wrong order in RTL
- Update translations:
  Jiri Grönroos (fi); Ekaterine Papava (ka); Pawan Chitrakar (ne);
  Juliano de Souza Camargo (pt_BR); Sergej A. (ru); Martin (sl); Anders
  Jonsson (sv); Sabri Ünal (tr); Yuri Chornoivan (uk); luming zh
  (zh_CN).

49.2 - October 17, 2025
==========================

- Fix the grid not being keyboard focusable after the first game (#122)

49.1 - October 10, 2025
==========================

- Fix arrow keys and WASD direction being reversed in RTL locales (#121)
- Fix earmark warnings not getting cleared up when disabling the setting

49.0 - September 12, 2025
==========================

- Updated translations:
  Bruce Cowan (en_GB); Jiri Grönroos (fi).

49.rc - August 29, 2025
==========================

- Restore long press behavior to v48
- Add button size workaround for gtk >= 4.19.2
- Fix fixed cells opening the picker
- Fix clear button sensitivity after undo/redo on the value picker
- Fix stuck focus during pause
- Updated translations:
  Daniel Rusek (cs); Asier Saratsua Garmendia (eu); Balázs Úr (hu).

49.beta - August 1, 2025
==========================

- Popdown the picker and unselect the grid on pausing
- Track keyboard input for focus handling with a 5 seconds timeout
- Fix clock not resuming on closing keyboard shortcuts
- Fix lock tooltip color in light mode