@@ -23,10 +23,11 @@ template $SudokuPrintDialog: Adw.Dialog {
             title: _("_Number of Puzzles");
             use-underline: true;
             numeric: true;
+            snap-to-ticks: true;
 
             adjustment: Adjustment {
               lower: 1;
-              upper: 100;
+              upper: 120; //divisible by 2, 3 and 4
               value: 2;
               step-increment: 1;
               page-increment: 10;
