@@ -21,6 +21,7 @@
 - Add RTL support for earmarks
 - Merge print current puzzle into print multiple dialog
 - In print multiple dialog:
+  Synchronize number of puzzles to multiples of puzzles per page
   Mirror print button with start game button
   Add an ellipsis to Print
   Use only the latest played difficulty to preselect choices
